--- a/StmDiscoReg.ioc
+++ b/StmDiscoReg.ioc
@@ -45,8 +45,10 @@ PE13.GPIO_Mode=GPIO_MODE_AF_PP
 PF13.GPIO_Mode=GPIO_MODE_AF_PP
 RTC.SynchPrediv=9999
 PG15.GPIO_Label=SDNCAS
+PA4.Mode=RGB666
 PF7.Signal=SPI5_SCK
 PD13.GPIO_Mode=GPIO_MODE_OUTPUT_PP
+NVIC.DMA2D_IRQn=true\:14\:0\:true\:false\:true\:true\:true
 SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 SH.FMC_D11_DA11.0=FMC_D11,sd-16b-d1
@@ -72,6 +74,7 @@ PB12.GPIO_Label=OTG_HS_ID
 FMC.SelfRefreshTime1=4
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 PF12.GPIO_Label=A6
+LTDC.IPParameters=ActiveW,ActiveH,VSync,HBP,HFP,VBP,HSync,VFP
 ProjectManager.BackupPrevious=false
 PC4.GPIO_Label=OTG_FS_PSO [OTG_FS_PowerSwitchOn]
 PB1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -95,8 +98,9 @@ PE1.Locked=true
 PB6.Locked=true
 PC15/OSC32_OUT.Locked=true
 USB_OTG_HS.IPParameters=VirtualMode-Host_FS
-PF1.GPIO_Mode=GPIO_MODE_AF_PP
 PF1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PF1.GPIO_Mode=GPIO_MODE_AF_PP
+LTDC.HSync=10
 PF14.GPIO_PuPd=GPIO_NOPULL
 PG0.GPIO_PuPd=GPIO_NOPULL
 ProjectManager.HalAssertFull=false
@@ -122,10 +126,12 @@ SPI5.CalculateBaudRate=5.25 MBits/s
 PE8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
+LTDC.VSync=2
 PF5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.APB1TimFreq_Value=84000000
 PC14/OSC32_IN.GPIO_Label=PC14-OSC32_IN
 FMC.RowCycleDelay2=7
+PF10.Mode=RGB666
 FMC.RowCycleDelay1=7
 PB13.Mode=Activate_VBUS_FS
 PD3.GPIO_PuPd=GPIO_NOPULL
@@ -144,7 +150,7 @@ SH.FMC_A4.0=FMC_A4,12b-sda1
 ProjectManager.ProjectFileName=StmDiscoReg.ioc
 SH.FMC_A5.ConfNb=1
 Mcu.Pin79=PD3
-Mcu.PinsNb=99
+Mcu.PinsNb=100
 Mcu.Pin73=PA13
 Mcu.Pin74=PA14
 PF4.GPIO_Mode=GPIO_MODE_AF_PP
@@ -162,11 +168,12 @@ PD3.Signal=LTDC_G7
 Mcu.Pin70=PA10
 PC2.Signal=GPIO_Output
 PH1/OSC_OUT.GPIOParameters=GPIO_Label
-RCC.VCOSAIOutputFreq_ValueQ=108000000
-RCC.VCOSAIOutputFreq_ValueR=216000000
+RCC.VCOSAIOutputFreq_ValueQ=48000000
+RCC.VCOSAIOutputFreq_ValueR=48000000
 Mcu.Pin68=PA8
 Mcu.Pin69=PA9
 PB14.Locked=true
+PD6.Mode=RGB666
 Mcu.Pin62=PG6
 PG14.Locked=true
 Mcu.Pin63=PG7
@@ -181,6 +188,7 @@ PG8.GPIO_PuPd=GPIO_NOPULL
 PF8.GPIO_Label=SPI5_MISO [L3GD20_SDO]
 USB_HOST0.BSP.semaphore=
 PD10.Signal=FMC_D15_DA15
+PA3.Mode=RGB666
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Label=B6
 PA15.Locked=true
@@ -280,10 +288,11 @@ PC14/OSC32_IN.Locked=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PD15.Locked=true
 SH.FMC_SDNRAS.ConfNb=1
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x800
 Mcu.Pin15=PC1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin16=PC2
+PB1.Mode=RGB666
 Mcu.Pin13=PH1/OSC_OUT
 PD0.GPIO_PuPd=GPIO_NOPULL
 Mcu.Pin14=PC0
@@ -313,6 +322,7 @@ Mcu.Family=STM32F4
 FMC.IPParameters=CASLatency1,SDClockPeriod1,SDClockPeriod2,ReadBurst1,ReadPipeDelay1,ReadPipeDelay2,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,RowCycleDelay2,WriteRecoveryTime1,RPDelay1,RPDelay2,RCDDelay1
 NVIC.OTG_HS_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.MainLocation=Core/Src
+PA6.Mode=RGB666
 SH.FMC_A6.ConfNb=1
 SH.FMC_A8.0=FMC_A8,12b-sda1
 PC15/OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
@@ -329,6 +339,7 @@ PD9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD0.GPIO_Label=D2
 RTC.WeekDay=RTC_WEEKDAY_WEDNESDAY
+PA11.Mode=RGB666
 PB2/BOOT1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PF9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD6.Locked=true
@@ -347,15 +358,15 @@ PG15.Signal=FMC_SDNCAS
 PB5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 SH.GPXTI2.0=GPIO_EXTI2
 PD13.Signal=GPIO_Output
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
+Mcu.IP4=I2C3
+Mcu.IP5=LTDC
 RCC.FCLKCortexFreq_Value=168000000
 PD13.Locked=true
-Mcu.IP2=FMC
-Mcu.IP3=I2C3
+Mcu.IP2=FATFS
+Mcu.IP3=FMC
 PA15.GPIO_Label=TP_INT1 [Touch Panel]
 Mcu.IP0=ADC1
-Mcu.IP1=FATFS
+Mcu.IP1=DMA2D
 PF9.Locked=true
 PF1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE11.GPIO_PuPd=GPIO_NOPULL
@@ -377,19 +388,22 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA4.GPIO_PuPd=GPIO_NOPULL
 SH.FMC_A14_BA0.ConfNb=1
 FMC.ExitSelfRefreshDelay1=7
-Mcu.IP10=USART1
+Mcu.IP10=SYS
 PF7.GPIO_Mode=GPIO_MODE_AF_PP
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-Mcu.IP12=USB_OTG_HS
+Mcu.IP12=USART1
 PE13.GPIO_PuPd=GPIO_NOPULL
-Mcu.IP11=USB_HOST
+Mcu.IP11=TIM2
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC15/OSC32_OUT.GPIOParameters=GPIO_Label
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PH1/OSC_OUT.GPIO_Label=PH1-OSC_OUT
 PC4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+LTDC.VBP=2
 PA6.GPIO_PuPd=GPIO_NOPULL
+Mcu.IP14=USB_OTG_HS
 PF9.Mode=Full_Duplex_Master
+Mcu.IP13=USB_HOST
 PF7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 RCC.VCOInputFreq_Value=1000000
 PF8.GPIO_PuPd=GPIO_NOPULL
@@ -418,18 +432,20 @@ ProjectManager.ToolChainLocation=
 PG1.GPIO_PuPd=GPIO_NOPULL
 SH.GPXTI0.0=GPIO_EXTI0
 PA15.Signal=GPXTI15
+DMA2D.IPParameters=ColorMode,Mode
 PF8.Signal=SPI5_MISO
 PG0.GPIO_Label=A10
 VP_FATFS_VS_USB.Signal=FATFS_VS_USB
-Mcu.Pin95=VP_RTC_VS_RTC_Calendar
-Mcu.Pin96=VP_SYS_VS_tim6
+Mcu.Pin95=VP_RTC_VS_RTC_Activate
+Mcu.Pin96=VP_RTC_VS_RTC_Calendar
 PF4.Locked=true
-Mcu.Pin93=VP_FATFS_VS_USB
+Mcu.Pin93=VP_DMA2D_VS_DMA2D
 USB_HOST0.BSP.name=Drive_VBUS_HS
-Mcu.Pin94=VP_RTC_VS_RTC_Activate
+Mcu.Pin94=VP_FATFS_VS_USB
+Mcu.Pin99=VP_USB_HOST_VS_USB_HOST_MSC_HS
 PB5.GPIO_Label=SDCKE1
-Mcu.Pin97=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin98=VP_USB_HOST_VS_USB_HOST_MSC_HS
+Mcu.Pin97=VP_SYS_VS_tim6
+Mcu.Pin98=VP_TIM2_VS_ClockSourceINT
 PD0.GPIO_Mode=GPIO_MODE_AF_PP
 PG14.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 Mcu.Pin91=PE0
@@ -461,6 +477,8 @@ PE0.GPIO_PuPd=GPIO_NOPULL
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 PG1.GPIO_Mode=GPIO_MODE_AF_PP
 USB_HOST.IPParameters=USBH_HandleTypeDef-MSC_HS,VirtualModeHS
+NVIC.LTDC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+LTDC.VFP=4
 PD15.GPIO_Label=D1
 PG7.Locked=true
 PB8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -469,6 +487,7 @@ PE14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA10.Mode=Asynchronous
 PC9.GPIO_Label=I2C3_SDA [ACP/RF_SDA]
 USB_HOST0.BSP.solution=PC4
+PC10.Mode=RGB666
 PF10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 ProjectManager.DefaultFWLocation=true
 PE14.GPIO_Label=D11
@@ -499,6 +518,7 @@ PA3.GPIO_Mode=GPIO_MODE_AF_PP
 STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1.IPParameters=tgfx_custom_width,tgfx_custom_height,tgfx_datareader,ApplicationCcGraphicsJjApplication
 PG0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB9.Mode=RGB666
 PG10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE0.Locked=true
 PF9.GPIO_Label=SPI5_MOSI [L3GD20_SDA/SDI/SDO]
@@ -509,6 +529,7 @@ RCC.VCOI2SOutputFreq_Value=192000000
 PE10.GPIO_Mode=GPIO_MODE_AF_PP
 board=STM32F429I-DISC1
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PG12.Mode=RGB666
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 RCC.VCOOutputFreq_Value=336000000
 PF14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -528,17 +549,17 @@ PF1.Signal=FMC_A1
 SH.FMC_D11_DA11.ConfNb=1
 ADC1.NbrOfConversion=1
 PF8.GPIO_Mode=GPIO_MODE_AF_PP
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSAIN,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSAIDivR,PLLSAIN,PLLSAIR,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 ProjectManager.AskForMigrate=true
 PE0.Signal=FMC_NBL0
 PE7.GPIO_Label=D4
 PE12.Signal=FMC_D9_DA9
 PE12.GPIO_Mode=GPIO_MODE_AF_PP
 FATFS._MAX_SS=4096
-Mcu.IP8=SYS
-Mcu.IP9=TIM2
-Mcu.IP6=RTC
-Mcu.IP7=SPI5
+Mcu.IP8=RTC
+Mcu.IP9=SPI5
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.SYSCLKFreq_VALUE=168000000
@@ -588,6 +609,7 @@ VP_SYS_VS_tim6.Mode=TIM6
 PE14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 SH.FMC_A4.ConfNb=1
 FMC.RCDDelay1=2
+PB10.Mode=RGB666
 PA8.GPIO_Mode=GPIO_MODE_AF_OD
 PG4.Signal=FMC_A14_BA0
 PG4.Locked=true
@@ -607,6 +629,7 @@ PB6.GPIO_Label=SDNE1 [SDRAM_CS]
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB13.Signal=USB_OTG_HS_VBUS
 PD3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PG6.Mode=RGB666
 PD6.GPIO_Label=B2
 PG13.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -616,7 +639,7 @@ PB11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 SH.FMC_A15_BA1.0=FMC_BA1,FourSdramBanks1
 PD14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-RCC.LCDTFTFreq_Value=108000000
+RCC.LCDTFTFreq_Value=6000000
 TIM2.IPParameters=Period,TIM_MasterOutputTrigger
 PB2/BOOT1.GPIO_Label=BOOT1
 SH.FMC_D10_DA10.ConfNb=1
@@ -648,6 +671,7 @@ PD11.GPIO_Mode=GPIO_MODE_INPUT
 PF8.Mode=Full_Duplex_Master
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PF3.Signal=FMC_A3
+PD3.Mode=RGB666
 PE10.Signal=FMC_D7_DA7
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 RCC.MCO2PinFreq_Value=168000000
@@ -668,6 +692,7 @@ SH.FMC_SDCLK.0=FMC_SDCLK,12b-sda1
 PC2.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 PG12.GPIO_PuPd=GPIO_NOPULL
 PF14.Signal=FMC_A8
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -683,7 +708,7 @@ SPI5.VirtualType=VM_MASTER
 ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PF4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-RCC.SAI_AClocksFreq_Value=108000000
+RCC.SAI_AClocksFreq_Value=48000000
 PG6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE12.GPIO_PuPd=GPIO_NOPULL
 PD8.GPIO_Mode=GPIO_MODE_AF_PP
@@ -722,8 +747,10 @@ SH.FMC_A3.0=FMC_A3,12b-sda1
 PA11.Locked=true
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
 PF2.GPIO_Mode=GPIO_MODE_AF_PP
+PB11.Mode=RGB666
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 SH.FMC_D15_DA15.0=FMC_D15,sd-16b-d1
+PC6.Mode=RGB666
 STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1_SwParameter=ApplicationCcGraphicsJjApplication\:TouchGFXOoGenerator;
 USB_HOST.VirtualModeHS=Msc
 PC6.Locked=true
@@ -737,6 +764,7 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 PE15.Signal=FMC_D12_DA12
 PG11.GPIO_Mode=GPIO_MODE_AF_PP
 PE8.Signal=FMC_D5_DA5
@@ -770,12 +798,14 @@ SH.FMC_A10.ConfNb=1
 USART1.VirtualMode=VM_ASYNC
 ProjectManager.CompilerOptimize=6
 SH.FMC_A5.0=FMC_A5,12b-sda1
+PG11.Mode=RGB666
 PA11.Signal=LTDC_R4
 PF8.Locked=true
 ProjectManager.ComputerToolchain=false
 PF9.Signal=SPI5_MOSI
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 PC9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB8.Mode=RGB666
 PF12.GPIO_PuPd=GPIO_NOPULL
 PF3.Locked=true
 PA8.Mode=I2C
@@ -810,13 +840,15 @@ Mcu.UserName=STM32F429ZITx
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB6.GPIO_Mode=GPIO_MODE_AF_PP
+RCC.PLLSAIDivR=RCC_PLLSAIDIVR_8
+LTDC.HBP=20
 PC10.Locked=true
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG6.Locked=true
 PC10.Signal=LTDC_R2
 PF4.GPIO_PuPd=GPIO_NOPULL
 SH.FMC_NBL0.0=FMC_NBL0,Sd2ByteEnable1
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA2D_Init-DMA2D-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_LTDC_Init-LTDC-false-HAL-true,7-MX_SPI5_Init-SPI5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-MX_FATFS_Init-FATFS-false-HAL-false,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_USB_HOST_Init-USB_HOST-false-HAL-false,14-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_SPI5_Init-SPI5-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_USB_HOST_Init-USB_HOST-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_DMA2D_Init-DMA2D-false-HAL-true,13-MX_LTDC_Init-LTDC-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 SH.FMC_D6_DA6.0=FMC_D6,sd-16b-d1
 PC0.GPIO_Label=SDNWE
@@ -830,8 +862,8 @@ PB11.GPIO_PuPd=GPIO_NOPULL
 PB11.Signal=LTDC_G5
 PG8.GPIO_Mode=GPIO_MODE_AF_PP
 PF2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-ProjectManager.StackSize=0x400
-RCC.SAI_BClocksFreq_Value=108000000
+ProjectManager.StackSize=0xD00
+RCC.SAI_BClocksFreq_Value=48000000
 PD11.GPIO_PuPd=GPIO_NOPULL
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 SH.FMC_A7.0=FMC_A7,12b-sda1
@@ -846,7 +878,7 @@ PH0/OSC_IN.Mode=HSE-External-Oscillator
 PG11.GPIO_PuPd=GPIO_NOPULL
 PD11.GPIO_Label=TE [LCD-RGB_TE]
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=13
+Mcu.IPNb=15
 RCC.I2SClocksFreq_Value=96000000
 PF11.GPIO_Label=SDNRAS
 PA0/WKUP.Locked=true
@@ -857,7 +889,7 @@ Mcu.Pin6=PF4
 Mcu.Pin7=PF5
 Mcu.Pin8=PF7
 Mcu.Pin9=PF8
-RCC.VCOSAIOutputFreq_Value=432000000
+RCC.VCOSAIOutputFreq_Value=192000000
 SH.FMC_A10.0=FMC_A10,12b-sda1
 RCC.AHBFreq_Value=168000000
 Mcu.Pin0=PC14/OSC32_IN
@@ -883,6 +915,7 @@ File.Version=6
 PA10.GPIO_Label=STLINK_TX [STM32F103CBT6_PA2]
 RTC.AsynchPrediv=31
 SH.FMC_D5_DA5.ConfNb=1
+LTDC.HFP=10
 SH.FMC_D2_DA2.ConfNb=1
 PB8.Locked=true
 FMC.ReadPipeDelay1=FMC_SDRAM_RPIPE_DELAY_1
@@ -890,6 +923,8 @@ FMC.ReadPipeDelay2=FMC_SDRAM_RPIPE_DELAY_1
 PA0/WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PE10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
+DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
+LTDC.ActiveW=240
 USB_HOST0.BSP.i2creg=
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PF12.GPIO_Mode=GPIO_MODE_AF_PP
@@ -912,8 +947,9 @@ SH.FMC_A9.0=FMC_A9,12b-sda1
 SH.FMC_D4_DA4.0=FMC_D4,sd-16b-d1
 PE8.GPIO_Mode=GPIO_MODE_AF_PP
 PE0.GPIO_Label=NBL0 [SDRAM_LDQM]
-RCC.PLLSAIN=432
+RCC.PLLSAIN=192
 PF5.Signal=FMC_A5
+RCC.PLLSAIR=4
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC4.Locked=true
@@ -936,6 +972,7 @@ PG1.Signal=FMC_A11
 PG1.Locked=true
 SH.FMC_SDCLK.ConfNb=1
 PC4.Signal=GPIO_Output
+PG10.Mode=RGB666
 USB_HOST.BSP.number=1
 PG10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 NVIC.SPI5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -950,6 +987,7 @@ PE15.GPIO_Label=D12
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 ProjectManager.TargetToolchain=STM32CubeIDE
 PE7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+LTDC.ActiveH=320
 SH.FMC_D1_DA1.ConfNb=1
 PF15.Locked=true
 RCC.VcooutputI2SQ=96000000
@@ -958,12 +996,14 @@ PC2.Locked=true
 ProjectManager.RegisterCallBack=
 PF5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE11.Signal=FMC_D8_DA8
+PG7.Mode=RGB666
 RCC.LSE_VALUE=32768
 PD3.Locked=true
 PE7.GPIO_Mode=GPIO_MODE_AF_PP
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB1.Locked=true
 PG14.Signal=GPIO_Output
+PB0.Mode=RGB666
 PG1.GPIO_Label=A11
 PB9.GPIO_Mode=GPIO_MODE_AF_PP
 PD11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -994,6 +1034,7 @@ PA13.GPIO_Label=SWDIO
 PD14.Signal=FMC_D0_DA0
 PF0.GPIO_PuPd=GPIO_NOPULL
 PA7.GPIO_Label=ACP_RST
+PA12.Mode=RGB666
 PG12.Locked=true
 PC5.GPIO_Label=OTG_FS_OC [OTG_FS_OverCurrent]
 PA14.Signal=SYS_JTCK-SWCLK
@@ -1005,11 +1046,13 @@ PE13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB8.Signal=LTDC_B6
 PF14.GPIO_Mode=GPIO_MODE_AF_PP
 PC9.Signal=I2C3_SDA
+PC7.Mode=RGB666
 PA11.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Mode=GPIO_MODE_AF_PP
 RCC.APB1Freq_Value=42000000
 PB11.Locked=true
 ProjectManager.DeviceId=STM32F429ZITx
+DMA2D.Mode=DMA2D_R2M
 ProjectManager.LibraryCopy=1
 PD12.GPIO_PuPd=GPIO_NOPULL
 SPI5.Direction=SPI_DIRECTION_2LINES
