--- a/StmDiscoReg.ioc
+++ b/StmDiscoReg.ioc
@@ -137,90 +137,91 @@ SH.FMC_D3_DA3.ConfNb=1
 PG12.Signal=LTDC_B4
 PB5.GPIO_Mode=GPIO_MODE_AF_PP
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+Mcu.Pin80=PD3
 PD6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-Mcu.Pin80=PD6
-Mcu.Pin81=PG10
+Mcu.Pin81=PD6
 SH.FMC_A4.0=FMC_A4,12b-sda1
 ProjectManager.ProjectFileName=StmDiscoReg.ioc
 SH.FMC_A5.ConfNb=1
-Mcu.Pin79=PD3
-Mcu.PinsNb=99
-Mcu.Pin73=PA13
-Mcu.Pin74=PA14
+Mcu.Pin79=PD1
+Mcu.PinsNb=100
+Mcu.Pin73=PA12
+Mcu.Pin74=PA13
 PF4.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin71=PA11
-Mcu.Pin72=PA12
+Mcu.Pin71=PA10
+Mcu.Pin72=PA11
 PG5.Locked=true
-Mcu.Pin77=PD0
+Mcu.Pin77=PC10
 PG5.Signal=FMC_A15_BA1
-Mcu.Pin78=PD1
-Mcu.Pin75=PA15
+Mcu.Pin78=PD0
+Mcu.Pin75=PA14
 SH.FMC_D10_DA10.0=FMC_D10,sd-16b-d1
-Mcu.Pin76=PC10
+Mcu.Pin76=PA15
 PB6.GPIO_PuPd=GPIO_NOPULL
 PD3.Signal=LTDC_G7
-Mcu.Pin70=PA10
+Mcu.Pin70=PA9
 PC2.Signal=GPIO_Output
 PH1/OSC_OUT.GPIOParameters=GPIO_Label
 RCC.VCOSAIOutputFreq_ValueQ=108000000
 RCC.VCOSAIOutputFreq_ValueR=216000000
-Mcu.Pin68=PA8
-Mcu.Pin69=PA9
+Mcu.Pin68=PC9
+Mcu.Pin69=PA8
 PB14.Locked=true
-Mcu.Pin62=PG6
+Mcu.Pin62=PG5
 PG14.Locked=true
-Mcu.Pin63=PG7
+Mcu.Pin63=PG6
 PF5.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin60=PG4
-Mcu.Pin61=PG5
-Mcu.Pin66=PC7
-Mcu.Pin67=PC9
-Mcu.Pin64=PG8
-Mcu.Pin65=PC6
+Mcu.Pin60=PD15
+Mcu.Pin61=PG4
+Mcu.Pin66=PC6
+Mcu.Pin67=PC7
+Mcu.Pin64=PG7
+Mcu.Pin65=PG8
 PG8.GPIO_PuPd=GPIO_NOPULL
 PF8.GPIO_Label=SPI5_MISO [L3GD20_SDO]
 USB_HOST0.BSP.semaphore=
+PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD10.Signal=FMC_D15_DA15
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Label=B6
 PA15.Locked=true
 PB10.GPIO_Mode=GPIO_MODE_AF_PP
 PA8.GPIO_Label=I2C3_SCL [ACP/RF_SCL]
-Mcu.Pin59=PD15
+Mcu.Pin59=PD14
 SH.GPXTI2.ConfNb=1
-Mcu.Pin57=PD13
-Mcu.Pin58=PD14
-Mcu.Pin51=PB15
+Mcu.Pin57=PD12
+Mcu.Pin58=PD13
+Mcu.Pin51=PB14
 RTC.Year=21
-Mcu.Pin52=PD8
-Mcu.Pin50=PB14
-Mcu.Pin55=PD11
-Mcu.Pin56=PD12
-Mcu.Pin53=PD9
+Mcu.Pin52=PB15
+Mcu.Pin50=PB13
+Mcu.Pin55=PD10
+Mcu.Pin56=PD11
+Mcu.Pin53=PD8
 PE8.GPIO_Label=D5
-Mcu.Pin54=PD10
+Mcu.Pin54=PD9
 PB1.GPIO_Mode=GPIO_MODE_AF_PP
 PB11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB9.Locked=true
-Mcu.Pin48=PB12
-Mcu.Pin49=PB13
+Mcu.Pin48=PB11
+Mcu.Pin49=PB12
 PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-Mcu.Pin46=PB10
-Mcu.Pin47=PB11
+Mcu.Pin46=PE15
+Mcu.Pin47=PB10
 PG10.GPIO_Mode=GPIO_MODE_AF_PP
 PF3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC14/OSC32_IN.GPIOParameters=GPIO_Label
 PB14.Signal=USB_OTG_HS_DM
 PG6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA5.Signal=ADCx_IN5
-Mcu.Pin40=PE10
-Mcu.Pin41=PE11
+Mcu.Pin40=PE9
+Mcu.Pin41=PE10
 PE13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-Mcu.Pin44=PE14
-Mcu.Pin45=PE15
-Mcu.Pin42=PE12
+Mcu.Pin44=PE13
+Mcu.Pin45=PE14
+Mcu.Pin42=PE11
 PF10.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin43=PE13
+Mcu.Pin43=PE12
 PE1.GPIO_Label=NBL1 [SDRAM_UDQM]
 PF15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF13.GPIO_PuPd=GPIO_NOPULL
@@ -228,25 +229,25 @@ PB13.GPIO_PuPd=GPIO_NOPULL
 FMC.ReadBurst1=FMC_SDRAM_RBURST_DISABLE
 SH.FMC_A6.0=FMC_A6,12b-sda1
 PE14.Signal=FMC_D11_DA11
-Mcu.Pin37=PE7
-Mcu.Pin38=PE8
-Mcu.Pin35=PG0
+Mcu.Pin37=PG1
+Mcu.Pin38=PE7
+Mcu.Pin35=PF15
 PB15.GPIO_Label=OTG_HS_DP
-Mcu.Pin36=PG1
+Mcu.Pin36=PG0
 PF12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 SH.FMC_D14_DA14.ConfNb=1
-Mcu.Pin39=PE9
+Mcu.Pin39=PE8
 PG7.GPIO_Label=DOTCLK [LCT-RGB_DOTCLK]
 PF4.GPIO_Label=A4
-Mcu.Pin30=PF11
+Mcu.Pin30=PB2/BOOT1
 PA1.GPIO_Label=MEMS_INT1 [L3GD20_INT1]
-Mcu.Pin33=PF14
+Mcu.Pin33=PF13
 PC9.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=PF15
-Mcu.Pin31=PF12
+Mcu.Pin34=PF14
+Mcu.Pin31=PF11
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_HSE_DIV8
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin32=PF13
+Mcu.Pin32=PF12
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PF13.Signal=FMC_A7
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -256,20 +257,20 @@ PG14.GPIO_PuPd=GPIO_NOPULL
 PC9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PF9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-Mcu.Pin26=PC5
-Mcu.Pin27=PB0
-Mcu.Pin24=PA7
-Mcu.Pin25=PC4
+Mcu.Pin26=PC4
+Mcu.Pin27=PC5
+Mcu.Pin24=PA6
+Mcu.Pin25=PA7
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_TRGO
-Mcu.Pin28=PB1
+Mcu.Pin28=PB0
 PC7.GPIO_Label=G6
-Mcu.Pin29=PB2/BOOT1
+Mcu.Pin29=PB1
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-Mcu.Pin22=PA5
-Mcu.Pin23=PA6
-Mcu.Pin20=PA3
+Mcu.Pin22=PA4
+Mcu.Pin23=PA5
+Mcu.Pin20=PA2
 ADC1.master=1
-Mcu.Pin21=PA4
+Mcu.Pin21=PA3
 PA3.Locked=true
 PD10.Locked=true
 PA10.Locked=true
@@ -280,7 +281,7 @@ PC14/OSC32_IN.Locked=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PD15.Locked=true
 SH.FMC_SDNRAS.ConfNb=1
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x1000
 Mcu.Pin15=PC1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin16=PC2
@@ -288,11 +289,11 @@ Mcu.Pin13=PH1/OSC_OUT
 PD0.GPIO_PuPd=GPIO_NOPULL
 Mcu.Pin14=PC0
 PF10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-Mcu.Pin19=PA2
+Mcu.Pin19=PA1
 SH.GPXTI15.ConfNb=1
 PG12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin17=PA0/WKUP
-Mcu.Pin18=PA1
+Mcu.Pin17=PC3
+Mcu.Pin18=PA0/WKUP
 PD8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PF10
@@ -421,23 +422,24 @@ PA15.Signal=GPXTI15
 PF8.Signal=SPI5_MISO
 PG0.GPIO_Label=A10
 VP_FATFS_VS_USB.Signal=FATFS_VS_USB
-Mcu.Pin95=VP_RTC_VS_RTC_Calendar
-Mcu.Pin96=VP_SYS_VS_tim6
+Mcu.Pin95=VP_RTC_VS_RTC_Activate
+Mcu.Pin96=VP_RTC_VS_RTC_Calendar
 PF4.Locked=true
-Mcu.Pin93=VP_FATFS_VS_USB
+Mcu.Pin93=PE1
 USB_HOST0.BSP.name=Drive_VBUS_HS
-Mcu.Pin94=VP_RTC_VS_RTC_Activate
+Mcu.Pin94=VP_FATFS_VS_USB
+Mcu.Pin99=VP_USB_HOST_VS_USB_HOST_MSC_HS
 PB5.GPIO_Label=SDCKE1
-Mcu.Pin97=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin98=VP_USB_HOST_VS_USB_HOST_MSC_HS
+Mcu.Pin97=VP_SYS_VS_tim6
+Mcu.Pin98=VP_TIM2_VS_ClockSourceINT
 PD0.GPIO_Mode=GPIO_MODE_AF_PP
 PG14.GPIO_Mode=GPIO_MODE_OUTPUT_PP
-Mcu.Pin91=PE0
-Mcu.Pin92=PE1
+Mcu.Pin91=PB9
+Mcu.Pin92=PE0
 PG11.GPIO_Label=B3
 PC5.Signal=GPXTI5
 PD3.GPIO_Label=G7
-Mcu.Pin90=PB9
+Mcu.Pin90=PB8
 PE14.GPIO_Mode=GPIO_MODE_AF_PP
 PE7.Signal=FMC_D4_DA4
 PD6.Signal=LTDC_B2
@@ -446,16 +448,16 @@ PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PF15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE12.Locked=true
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin84=PG13
-Mcu.Pin85=PG14
+Mcu.Pin84=PG12
+Mcu.Pin85=PG13
 PB15.Locked=true
-Mcu.Pin82=PG11
-Mcu.Pin83=PG12
+Mcu.Pin82=PG10
+Mcu.Pin83=PG11
 PA3.Signal=LTDC_B5
-Mcu.Pin88=PB6
-Mcu.Pin89=PB8
-Mcu.Pin86=PG15
-Mcu.Pin87=PB5
+Mcu.Pin88=PB5
+Mcu.Pin89=PB6
+Mcu.Pin86=PG14
+Mcu.Pin87=PG15
 SH.FMC_A3.ConfNb=1
 PE0.GPIO_PuPd=GPIO_NOPULL
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
@@ -601,6 +603,7 @@ FMC.LoadToActiveDelay1=2
 USB_HOST0.BSP.condition=
 PC6.GPIO_Label=HSYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+PC3.Locked=true
 PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA6.GPIO_Label=G2
 PB6.GPIO_Label=SDNE1 [SDRAM_CS]
@@ -615,6 +618,7 @@ PG15.GPIO_Mode=GPIO_MODE_AF_PP
 PB11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 SH.FMC_A15_BA1.0=FMC_BA1,FourSdramBanks1
 PD14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+SH.GPXTI3.ConfNb=1
 PD15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 RCC.LCDTFTFreq_Value=108000000
 TIM2.IPParameters=Period,TIM_MasterOutputTrigger
@@ -623,6 +627,7 @@ SH.FMC_D10_DA10.ConfNb=1
 USB_HOST0.BSP.component=
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PB6.Mode=SdramChipSelect2_1
+PC3.Signal=GPXTI3
 PE10.Locked=true
 NVIC.FMC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA1.GPIO_PuPd=GPIO_NOPULL
@@ -777,6 +782,7 @@ PF9.Signal=SPI5_MOSI
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 PC9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF12.GPIO_PuPd=GPIO_NOPULL
+PC3.GPIO_Label=REC_START
 PF3.Locked=true
 PA8.Mode=I2C
 PE12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -816,7 +822,7 @@ PG6.Locked=true
 PC10.Signal=LTDC_R2
 PF4.GPIO_PuPd=GPIO_NOPULL
 SH.FMC_NBL0.0=FMC_NBL0,Sd2ByteEnable1
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA2D_Init-DMA2D-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_LTDC_Init-LTDC-false-HAL-true,7-MX_SPI5_Init-SPI5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-MX_FATFS_Init-FATFS-false-HAL-false,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_USB_HOST_Init-USB_HOST-false-HAL-false,14-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_SPI5_Init-SPI5-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_USB_HOST_Init-USB_HOST-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 SH.FMC_D6_DA6.0=FMC_D6,sd-16b-d1
 PC0.GPIO_Label=SDNWE
@@ -830,7 +836,7 @@ PB11.GPIO_PuPd=GPIO_NOPULL
 PB11.Signal=LTDC_G5
 PG8.GPIO_Mode=GPIO_MODE_AF_PP
 PF2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x2000
 RCC.SAI_BClocksFreq_Value=108000000
 PD11.GPIO_PuPd=GPIO_NOPULL
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -964,6 +970,7 @@ PE7.GPIO_Mode=GPIO_MODE_AF_PP
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB1.Locked=true
 PG14.Signal=GPIO_Output
+SH.GPXTI3.0=GPIO_EXTI3
 PG1.GPIO_Label=A11
 PB9.GPIO_Mode=GPIO_MODE_AF_PP
 PD11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -1012,6 +1019,7 @@ PB11.Locked=true
 ProjectManager.DeviceId=STM32F429ZITx
 ProjectManager.LibraryCopy=1
 PD12.GPIO_PuPd=GPIO_NOPULL
+PC3.GPIO_PuPd=GPIO_PULLUP
 SPI5.Direction=SPI_DIRECTION_2LINES
 PB1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA7.Signal=GPIO_Output
