--- a/StmDiscoReg.ioc
+++ b/StmDiscoReg.ioc
@@ -149,10 +149,10 @@ Mcu.Pin81=PD6
 SH.FMC_A4.0=FMC_A4,12b-sda1
 ProjectManager.ProjectFileName=StmDiscoReg.ioc
 SH.FMC_A5.ConfNb=1
-Mcu.Pin79=PD3
-Mcu.PinsNb=100
-Mcu.Pin73=PA13
-Mcu.Pin74=PA14
+Mcu.Pin79=PD1
+Mcu.PinsNb=101
+Mcu.Pin73=PA12
+Mcu.Pin74=PA13
 PF4.GPIO_Mode=GPIO_MODE_AF_PP
 Mcu.Pin71=PA10
 Mcu.Pin72=PA11
@@ -170,11 +170,11 @@ PC2.Signal=GPIO_Output
 PH1/OSC_OUT.GPIOParameters=GPIO_Label
 RCC.VCOSAIOutputFreq_ValueQ=48000000
 RCC.VCOSAIOutputFreq_ValueR=48000000
-Mcu.Pin68=PA8
-Mcu.Pin69=PA9
+Mcu.Pin68=PC9
+Mcu.Pin69=PA8
 PB14.Locked=true
 PD6.Mode=RGB666
-Mcu.Pin62=PG6
+Mcu.Pin62=PG5
 PG14.Locked=true
 Mcu.Pin63=PG6
 PF5.GPIO_Mode=GPIO_MODE_AF_PP
@@ -289,7 +289,7 @@ PC14/OSC32_IN.Locked=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PD15.Locked=true
 SH.FMC_SDNRAS.ConfNb=1
-ProjectManager.HeapSize=0x1000
+ProjectManager.HeapSize=0x800
 Mcu.Pin15=PC1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin16=PC2
@@ -436,17 +436,17 @@ PA15.Signal=GPXTI15
 DMA2D.IPParameters=ColorMode,Mode
 PF8.Signal=SPI5_MISO
 PG0.GPIO_Label=A10
+Mcu.Pin95=VP_FATFS_VS_USB
 VP_FATFS_VS_USB.Signal=FATFS_VS_USB
-Mcu.Pin95=VP_RTC_VS_RTC_Activate
-Mcu.Pin96=VP_RTC_VS_RTC_Calendar
+Mcu.Pin96=VP_RTC_VS_RTC_Activate
 PF4.Locked=true
-Mcu.Pin93=VP_DMA2D_VS_DMA2D
+Mcu.Pin93=PE1
 USB_HOST0.BSP.name=Drive_VBUS_HS
-Mcu.Pin94=VP_FATFS_VS_USB
-Mcu.Pin99=VP_USB_HOST_VS_USB_HOST_MSC_HS
+Mcu.Pin94=VP_DMA2D_VS_DMA2D
+Mcu.Pin99=VP_TIM2_VS_ClockSourceINT
 PB5.GPIO_Label=SDCKE1
-Mcu.Pin97=VP_SYS_VS_tim6
-Mcu.Pin98=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin97=VP_RTC_VS_RTC_Calendar
+Mcu.Pin98=VP_SYS_VS_tim6
 PD0.GPIO_Mode=GPIO_MODE_AF_PP
 PG14.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 Mcu.Pin91=PB9
@@ -835,6 +835,7 @@ PG10.GPIO_Label=G3
 PG15.GPIO_PuPd=GPIO_NOPULL
 USB_HOST.USBH_HandleTypeDef-MSC_HS=hUsbHostHS
 PH0/OSC_IN.GPIOParameters=GPIO_Label
+Mcu.Pin100=VP_USB_HOST_VS_USB_HOST_MSC_HS
 SH.GPXTI1.0=GPIO_EXTI1
 PA2.GPIO_PuPd=GPIO_NOPULL
 PE7.GPIO_PuPd=GPIO_NOPULL
@@ -1009,6 +1010,7 @@ PB12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB1.Locked=true
 PG14.Signal=GPIO_Output
 PB0.Mode=RGB666
+SH.GPXTI3.0=GPIO_EXTI3
 PG1.GPIO_Label=A11
 PB9.GPIO_Mode=GPIO_MODE_AF_PP
 PD11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
