Build autoincrement, IWDG, small improvements

--- a/StmDiscoReg.ioc
+++ b/StmDiscoReg.ioc
@@ -150,7 +150,7 @@ SH.FMC_A4.0=FMC_A4,12b-sda1
 ProjectManager.ProjectFileName=StmDiscoReg.ioc
 SH.FMC_A5.ConfNb=1
 Mcu.Pin79=PD1
-Mcu.PinsNb=101
+Mcu.PinsNb=102
 Mcu.Pin73=PA12
 Mcu.Pin74=PA13
 PF4.GPIO_Mode=GPIO_MODE_AF_PP
@@ -360,7 +360,7 @@ PB5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 SH.GPXTI2.0=GPIO_EXTI2
 PD13.Signal=GPIO_Output
 Mcu.IP4=I2C3
-Mcu.IP5=LTDC
+Mcu.IP5=IWDG
 RCC.FCLKCortexFreq_Value=168000000
 PD13.Locked=true
 Mcu.IP2=FATFS
@@ -389,12 +389,12 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA4.GPIO_PuPd=GPIO_NOPULL
 SH.FMC_A14_BA0.ConfNb=1
 FMC.ExitSelfRefreshDelay1=7
-Mcu.IP10=SYS
+Mcu.IP10=SPI5
 PF7.GPIO_Mode=GPIO_MODE_AF_PP
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-Mcu.IP12=USART1
+Mcu.IP12=TIM2
 PE13.GPIO_PuPd=GPIO_NOPULL
-Mcu.IP11=TIM2
+Mcu.IP11=SYS
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC15/OSC32_OUT.GPIOParameters=GPIO_Label
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -402,10 +402,11 @@ PH1/OSC_OUT.GPIO_Label=PH1-OSC_OUT
 PC4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 LTDC.VBP=2
 PA6.GPIO_PuPd=GPIO_NOPULL
-Mcu.IP14=USB_OTG_HS
+Mcu.IP14=USB_HOST
 PF9.Mode=Full_Duplex_Master
-Mcu.IP13=USB_HOST
+Mcu.IP13=USART1
 PF7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+Mcu.IP15=USB_OTG_HS
 RCC.VCOInputFreq_Value=1000000
 PF8.GPIO_PuPd=GPIO_NOPULL
 PA14.Mode=Serial_Wire
@@ -438,15 +439,15 @@ PF8.Signal=SPI5_MISO
 PG0.GPIO_Label=A10
 Mcu.Pin95=VP_FATFS_VS_USB
 VP_FATFS_VS_USB.Signal=FATFS_VS_USB
-Mcu.Pin96=VP_RTC_VS_RTC_Activate
+Mcu.Pin96=VP_IWDG_VS_IWDG
 PF4.Locked=true
 Mcu.Pin93=PE1
 USB_HOST0.BSP.name=Drive_VBUS_HS
 Mcu.Pin94=VP_DMA2D_VS_DMA2D
-Mcu.Pin99=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin99=VP_SYS_VS_tim6
 PB5.GPIO_Label=SDCKE1
-Mcu.Pin97=VP_RTC_VS_RTC_Calendar
-Mcu.Pin98=VP_SYS_VS_tim6
+Mcu.Pin97=VP_RTC_VS_RTC_Activate
+Mcu.Pin98=VP_RTC_VS_RTC_Calendar
 PD0.GPIO_Mode=GPIO_MODE_AF_PP
 PG14.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 Mcu.Pin91=PB9
@@ -557,16 +558,17 @@ PE7.GPIO_Label=D4
 PE12.Signal=FMC_D9_DA9
 PE12.GPIO_Mode=GPIO_MODE_AF_PP
 FATFS._MAX_SS=4096
-Mcu.IP8=RTC
-Mcu.IP9=SPI5
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
+Mcu.IP8=RCC
+Mcu.IP9=RTC
+Mcu.IP6=LTDC
+Mcu.IP7=NVIC
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.SYSCLKFreq_VALUE=168000000
 PA1.Locked=true
 KeepUserPlacement=false
 PA13.Locked=true
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 PE15.GPIO_PuPd=GPIO_NOPULL
 PF13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -787,6 +789,7 @@ PG14.GPIO_Label=LD4 [Red Led]
 SH.FMC_SDNCAS.0=FMC_SDNCAS,12b-sda1
 ProjectManager.FreePins=false
 PG12.GPIO_Mode=GPIO_MODE_AF_PP
+IWDG.IPParameters=Prescaler
 SH.FMC_NBL1.ConfNb=1
 RCC.RTCHSEDivFreq_Value=320000
 ProjectManager.UnderRoot=true
@@ -834,8 +837,9 @@ PG7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG10.GPIO_Label=G3
 PG15.GPIO_PuPd=GPIO_NOPULL
 USB_HOST.USBH_HandleTypeDef-MSC_HS=hUsbHostHS
+Mcu.Pin101=VP_USB_HOST_VS_USB_HOST_MSC_HS
 PH0/OSC_IN.GPIOParameters=GPIO_Label
-Mcu.Pin100=VP_USB_HOST_VS_USB_HOST_MSC_HS
+Mcu.Pin100=VP_TIM2_VS_ClockSourceINT
 SH.GPXTI1.0=GPIO_EXTI1
 PA2.GPIO_PuPd=GPIO_NOPULL
 PE7.GPIO_PuPd=GPIO_NOPULL
@@ -852,6 +856,7 @@ PC10.Locked=true
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG6.Locked=true
 PC10.Signal=LTDC_R2
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 PF4.GPIO_PuPd=GPIO_NOPULL
 SH.FMC_NBL0.0=FMC_NBL0,Sd2ByteEnable1
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_SPI5_Init-SPI5-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_USB_HOST_Init-USB_HOST-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_DMA2D_Init-DMA2D-false-HAL-true,13-MX_LTDC_Init-LTDC-false-HAL-true
@@ -884,7 +889,7 @@ PH0/OSC_IN.Mode=HSE-External-Oscillator
 PG11.GPIO_PuPd=GPIO_NOPULL
 PD11.GPIO_Label=TE [LCD-RGB_TE]
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=15
+Mcu.IPNb=16
 RCC.I2SClocksFreq_Value=96000000
 PF11.GPIO_Label=SDNRAS
 PA0/WKUP.Locked=true
@@ -1049,6 +1054,7 @@ PG12.GPIO_Label=B4
 ADC1.NbrOfConversionFlag=1
 PF8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA15.GPIO_PuPd=GPIO_NOPULL
+IWDG.Prescaler=IWDG_PRESCALER_32
 PE13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB8.Signal=LTDC_B6
 PF14.GPIO_Mode=GPIO_MODE_AF_PP
