Fix memory size & dialog improvment

--- a/StmDiscoReg.ioc
+++ b/StmDiscoReg.ioc
@@ -289,7 +289,7 @@ PC14/OSC32_IN.Locked=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PD15.Locked=true
 SH.FMC_SDNRAS.ConfNb=1
-ProjectManager.HeapSize=0x800
+ProjectManager.HeapSize=0x1000
 Mcu.Pin15=PC1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin16=PC2
@@ -859,7 +859,7 @@ PC10.Signal=LTDC_R2
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 PF4.GPIO_PuPd=GPIO_NOPULL
 SH.FMC_NBL0.0=FMC_NBL0,Sd2ByteEnable1
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_SPI5_Init-SPI5-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_USB_HOST_Init-USB_HOST-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_DMA2D_Init-DMA2D-false-HAL-true,13-MX_LTDC_Init-LTDC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_SPI5_Init-SPI5-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_USB_HOST_Init-USB_HOST-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_DMA2D_Init-DMA2D-false-HAL-true,13-MX_LTDC_Init-LTDC-false-HAL-true,14-MX_IWDG_Init-IWDG-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 SH.FMC_D6_DA6.0=FMC_D6,sd-16b-d1
 PC0.GPIO_Label=SDNWE
@@ -873,7 +873,7 @@ PB11.GPIO_PuPd=GPIO_NOPULL
 PB11.Signal=LTDC_G5
 PG8.GPIO_Mode=GPIO_MODE_AF_PP
 PF2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-ProjectManager.StackSize=0xD00
+ProjectManager.StackSize=0x2000
 RCC.SAI_BClocksFreq_Value=48000000
 PD11.GPIO_PuPd=GPIO_NOPULL
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
