Calendar clock source from external 32.768kHz

--- a/StmDiscoReg.ioc
+++ b/StmDiscoReg.ioc
@@ -25,7 +25,7 @@ PG0.Signal=FMC_A10
 PC7.Locked=true
 PA3.GPIO_PuPd=GPIO_NOPULL
 PD8.Locked=true
-RCC.RTCFreq_Value=320000
+RCC.RTCFreq_Value=32768
 PE10.GPIO_PuPd=GPIO_NOPULL
 PD10.GPIO_PuPd=GPIO_NOPULL
 PD0.Locked=true
@@ -43,7 +43,7 @@ PG13.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PE13.GPIO_Mode=GPIO_MODE_AF_PP
 PF13.GPIO_Mode=GPIO_MODE_AF_PP
-RTC.SynchPrediv=9999
+RTC.SynchPrediv=1023
 PG15.GPIO_Label=SDNCAS
 PA4.Mode=RGB666
 PF7.Signal=SPI5_SCK
@@ -344,6 +344,7 @@ PA11.Mode=RGB666
 PB2/BOOT1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PF9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD6.Locked=true
+PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 SH.FMC_A14_BA0.0=FMC_BA0,FourSdramBanks1
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
@@ -371,7 +372,7 @@ Mcu.IP1=DMA2D
 PF9.Locked=true
 PF1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE11.GPIO_PuPd=GPIO_NOPULL
-RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_HSE_DIV25
+RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
 PF11.GPIO_PuPd=GPIO_NOPULL
 PB1.GPIO_PuPd=GPIO_NOPULL
 ProjectManager.PreviousToolchain=
@@ -551,7 +552,7 @@ PF1.Signal=FMC_A1
 SH.FMC_D11_DA11.ConfNb=1
 ADC1.NbrOfConversion=1
 PF8.GPIO_Mode=GPIO_MODE_AF_PP
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSAIDivR,PLLSAIN,PLLSAIR,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSAIDivR,PLLSAIN,PLLSAIR,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 ProjectManager.AskForMigrate=true
 PE0.Signal=FMC_NBL0
 PE7.GPIO_Label=D4
@@ -1008,7 +1009,6 @@ ProjectManager.RegisterCallBack=
 PF5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE11.Signal=FMC_D8_DA8
 PG7.Mode=RGB666
-RCC.LSE_VALUE=32768
 PD3.Locked=true
 PE7.GPIO_Mode=GPIO_MODE_AF_PP
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -1049,6 +1049,7 @@ PA7.GPIO_Label=ACP_RST
 PA12.Mode=RGB666
 PG12.Locked=true
 PC5.GPIO_Label=OTG_FS_OC [OTG_FS_OverCurrent]
+PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PA14.Signal=SYS_JTCK-SWCLK
 PG12.GPIO_Label=B4
 ADC1.NbrOfConversionFlag=1
