DateTime dialog + Touch & Screen 180 rotation

--- a/StmDiscoReg.ioc
+++ b/StmDiscoReg.ioc
@@ -327,6 +327,7 @@ PA6.Mode=RGB666
 SH.FMC_A6.ConfNb=1
 SH.FMC_A8.0=FMC_A8,12b-sda1
 PC15/OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
+RCC.PWREXT_OverDrive=PWREXT_OverDrive_DESACTIVATED
 ProjectManager.KeepUserCode=true
 ADC1.ContinuousConvMode=DISABLE
 SH.FMC_D14_DA14.0=FMC_D14,sd-16b-d1
@@ -407,6 +408,7 @@ Mcu.IP14=USB_HOST
 PF9.Mode=Full_Duplex_Master
 Mcu.IP13=USART1
 PF7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+RCC.LSE_Timout=2000
 Mcu.IP15=USB_OTG_HS
 RCC.VCOInputFreq_Value=1000000
 PF8.GPIO_PuPd=GPIO_NOPULL
@@ -552,7 +554,7 @@ PF1.Signal=FMC_A1
 SH.FMC_D11_DA11.ConfNb=1
 ADC1.NbrOfConversion=1
 PF8.GPIO_Mode=GPIO_MODE_AF_PP
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSAIDivR,PLLSAIN,PLLSAIR,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_Timout,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSAIDivR,PLLSAIN,PLLSAIR,PWREXT_OverDrive,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 ProjectManager.AskForMigrate=true
 PE0.Signal=FMC_NBL0
 PE7.GPIO_Label=D4
